@@ -3,20 +3,25 @@ package com.junit.test;
 import java.io.IOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Properties;
 
 import org.apache.commons.lang3.StringUtils;
+import org.apache.ibatis.datasource.pooled.PooledDataSource;
 import org.springframework.beans.BeansException;
+import org.springframework.beans.factory.BeanCreationException;
 import org.springframework.beans.factory.NoSuchBeanDefinitionException;
 import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
+import org.springframework.beans.factory.UnsatisfiedDependencyException;
 import org.springframework.beans.factory.annotation.AutowiredAnnotationBeanPostProcessor;
 import org.springframework.beans.factory.config.AutowireCapableBeanFactory;
+import org.springframework.beans.factory.config.BeanPostProcessor;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
+import org.springframework.boot.logging.logback.LogbackUtil;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
 import org.springframework.context.ApplicationEvent;
@@ -24,10 +29,13 @@ import org.springframework.context.MessageSourceResolvable;
 import org.springframework.context.NoSuchMessageException;
 import org.springframework.core.ResolvableType;
 import org.springframework.core.env.Environment;
+import org.springframework.core.env.PropertiesPropertySource;
+import org.springframework.core.env.PropertySources;
+import org.springframework.core.env.StandardEnvironment;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Component;
+import org.springframework.web.context.support.StandardServletEnvironment;
 
-import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 
 import lombok.extern.slf4j.Slf4j;
@@ -39,14 +47,14 @@ import lombok.extern.slf4j.Slf4j;
  */
 @Slf4j
 @Component
-public class TestUtil implements ApplicationContextAware{
+public class TestUtil implements ApplicationContextAware,BeanPostProcessor{
 	private static boolean test;
 	public static String mapperPath = "classpath*:/mapper/**/*.xml";
 	public static String mapperScanPath = "com.mapper";
 	public TestUtil() {
 		log.info("实例化TestUtil");
 	}
-	
+	public static PooledDataSource dataSource;
 	private static Map<String,Object> lazyBeanObjMap;
 	private static Map<String,Field> lazyBeanFieldMap;
 	private static Map<String,String> lazyBeanNameMap;
@@ -65,14 +73,21 @@ public class TestUtil implements ApplicationContextAware{
 	
 	private static ApplicationContext staticApplicationContext;
 	
+	public static void buildDataSource(String url,String username,String passwd) {
+		if(dataSource == null) {
+			dataSource = new PooledDataSource();
+		}
+		dataSource.setUrl(TestUtil.getPropertiesValue("jdbc.url"));
+		dataSource.setUsername(TestUtil.getPropertiesValue("jdbc.username"));
+		dataSource.setPassword(TestUtil.getPropertiesValue("jdbc.password"));
+		dataSource.setDriver(TestUtil.getPropertiesValue("jdbc.driver",""));
+	}
+	
 	public static boolean isTest() {
 		return test;
 	}
 	public static void openTest() {
 		test = true;
-	}
-	public void setApplicationContextLocal(ApplicationContext applicationContext) {
-		staticApplicationContext = applicationContext;
 	}
 	@Override
 	public void setApplicationContext(ApplicationContext applicationContext) throws BeansException {
@@ -108,15 +123,51 @@ public class TestUtil implements ApplicationContextAware{
 		
 		List<Class> list = ScanUtil.findStaticMethodClass();
 		log.info("static class =>{}",list.size());
-		list.stream().filter(classItem -> classItem != getClass()).forEach(classItem->{
+//		String key = "redis.node1.port";
+//		log.info("{}=>{}",key,getPropertiesValue(key));
+		/**
+		 * 不能是抽象类
+		 */
+		list.stream().filter(classItem -> classItem != getClass() && !Modifier.isAbstract(classItem.getModifiers())).forEach(classItem->{
+			log.info("static class =>{}",classItem);
 			LazyBean.processStatic(classItem);
 		});
 	}
 	
-	@SuppressWarnings("unchecked")
 	public static Object getExistBean(Class<?> classD) {
+		if(classD == ApplicationContext.class) {
+			return bf;
+		}
 		Object obj = staticApplicationContext.getBean(classD);
 		return obj;
+	}
+	
+	@SuppressWarnings("unchecked")
+	public static Object buildBean( Class c) {
+		Object obj = null;
+		try {
+			obj = bf.getBean(c);
+			if(obj!=null) {
+				return obj;
+			}
+		} catch (Exception e) {
+			log.error("不存在");
+		}
+		obj = staticApplicationContext.getAutowireCapableBeanFactory().createBean(c);
+		return obj; 
+	}
+	
+	public static void registerBean(Object bean) {
+		DefaultListableBeanFactory bf = (DefaultListableBeanFactory) staticApplicationContext.getAutowireCapableBeanFactory();
+		Object obj = null;
+		try {
+			obj = bf.getBean(bean.getClass());
+		} catch (Exception e) {
+			log.error("不存在");
+		}
+		if(obj==null) {
+			bf.registerSingleton(bean.getClass().getPackage().getName()+"."+bean.getClass().getSimpleName(), bean);
+		}
 	}
 	
 	@SuppressWarnings("unchecked")
@@ -137,6 +188,12 @@ public class TestUtil implements ApplicationContextAware{
 			return null;
 		}catch (NoSuchBeanDefinitionException e) {
 			return null;
+		}catch(UnsatisfiedDependencyException e) {
+			log.error("UnsatisfiedDependencyException=>{},{}获取异常",classD,beanName);
+			return null;
+		}catch (BeanCreationException e) {
+			log.error("BeanCreationException=>{},{}获取异常",classD,beanName);
+			return null;
 		}
 	}
 	public static String getPropertiesValue(String key,String defaultStr) {
@@ -154,51 +211,58 @@ public class TestUtil implements ApplicationContextAware{
 	public static String getPropertiesValue(String key) {
 		return getPropertiesValue(key,null);
 	}
-	public static Object value(String key,Class type) {
+	public static Object value(Object obj, String key,Class type) {
 		String value = getPropertiesValue(key);
 		try {
-			if(type == null || type == String.class) {
-				return	value;
-			}else if(type == Integer.class || type == int.class) {
-				return Integer.valueOf(value);
-			}else if(type == Long.class || type == long.class) {
-				return Long.valueOf(value);
-			}else if(type == Double.class || type == double.class) {
-				return Double.valueOf(value);
-			}else if(type == BigDecimal.class) {
-				return new BigDecimal(value);
-			}else if(type == Boolean.class || type == boolean.class) {
-				return new Boolean(value);
-			}else {
-				log.info("其他类型");
+			if(StringUtils.isNotBlank(value)) {
+				if(type == null || type == String.class) {
+					return	value;
+				}else if(type == Integer.class || type == int.class) {
+					return Integer.valueOf(value);
+				}else if(type == Long.class || type == long.class) {
+					return Long.valueOf(value);
+				}else if(type == Double.class || type == double.class) {
+					return Double.valueOf(value);
+				}else if(type == BigDecimal.class) {
+					return new BigDecimal(value);
+				}else if(type == Boolean.class || type == boolean.class) {
+					return new Boolean(value);
+				}else {
+					log.info("其他类型");
+				}
 			}
 		} catch (Exception e) {
-			e.printStackTrace();
+			System.out.println(obj.getClass().getName()+"转换类型异常"+key+"==>"+type);
+			log.error("转换类型异常",e);
 		}
 		
 		return null;
 	}
-//	private static List<Class> staticClass;
-//	public static void configStatic(Class... classArg) {
-//		if(staticClass == null) {
-//			staticClass = Lists.newArrayList();
-//		}
-//		staticClass.addAll(Lists.newArrayList(classArg));
-//	}
 	
-//	private static List<Class> contextUtil;
-//	public static void configBeanFactory(Class... classArg) {
-//		if(contextUtil == null) {
-//			contextUtil = Lists.newArrayList();
-//		}
-//		contextUtil.addAll(Lists.newArrayList(classArg));
-//	}
 	static BeanFactory bf = new BeanFactory();
 	public static String dubboXml = "classpath*:/dubbo-context.xml";
+	public static String mapperJdbcPrefix = "";
 	
 	static class BeanFactory implements ApplicationContext{
+		
+		private Properties properties;
+		
 		@Override
 		public Environment getEnvironment() {
+			if(staticApplicationContext == this) {
+				StandardServletEnvironment env = new StandardServletEnvironment();
+				try {
+					Resource[] resources = ScanUtil.getResources("application.properties");
+					properties = new Properties();
+					if(resources.length>0) {
+						properties.load(resources[0].getInputStream());
+						env.getPropertySources().addFirst(new PropertiesPropertySource("local", properties));
+					}
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+				return env;
+			}
 			return staticApplicationContext.getEnvironment();
 		}
 
@@ -220,7 +284,6 @@ public class TestUtil implements ApplicationContextAware{
 			return null;
 		}
 
-		@Override
 		public String[] getBeanNamesForType(ResolvableType type) {
 			// TODO Auto-generated method stub
 			return null;
@@ -251,7 +314,6 @@ public class TestUtil implements ApplicationContextAware{
 			return null;
 		}
 
-		@Override
 		public String[] getBeanNamesForAnnotation(Class<? extends Annotation> annotationType) {
 			// TODO Auto-generated method stub
 			return null;
@@ -271,6 +333,9 @@ public class TestUtil implements ApplicationContextAware{
 
 		@Override
 		public Object getBean(String name) throws BeansException {
+			if(this == staticApplicationContext) {
+				return ScanUtil.findBean(name);
+			}
 			if(staticApplicationContext.containsBean(name)) {
 				return staticApplicationContext.getBean(name);
 			}else {
@@ -286,6 +351,9 @@ public class TestUtil implements ApplicationContextAware{
 		@Override
 		public <T> T getBean(Class<T> requiredType) throws BeansException {
 			try {
+				if(this == staticApplicationContext) {
+					return (T)ScanUtil.findBean(requiredType);
+				}
 				Object bean = staticApplicationContext.getBean(requiredType);
 				return (T) bean;
 			} catch (NoSuchBeanDefinitionException e) {
@@ -295,10 +363,12 @@ public class TestUtil implements ApplicationContextAware{
 
 		@Override
 		public Object getBean(String name, Object... args) throws BeansException {
+			if(this == staticApplicationContext) {
+				return null;
+			}
 			return staticApplicationContext.getBean(name, args);
 		}
 
-		@Override
 		public <T> T getBean(Class<T> requiredType, Object... args) throws BeansException {
 			// TODO Auto-generated method stub
 			return null;
@@ -322,7 +392,6 @@ public class TestUtil implements ApplicationContextAware{
 			return false;
 		}
 
-		@Override
 		public boolean isTypeMatch(String name, ResolvableType typeToMatch) throws NoSuchBeanDefinitionException {
 			// TODO Auto-generated method stub
 			return false;
@@ -396,6 +465,12 @@ public class TestUtil implements ApplicationContextAware{
 		@Override
 		public Resource getResource(String location) {
 			// TODO Auto-generated method stub
+			try {
+				return ScanUtil.getRecource(location);
+			} catch (IOException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
 			return null;
 		}
 
@@ -440,6 +515,36 @@ public class TestUtil implements ApplicationContextAware{
 			// TODO Auto-generated method stub
 			return null;
 		}
-		
+
+		public Properties getProperties() {
+			return properties;
+		}
+
+	}
+
+	public static PropertySources getPropertySource() {
+		StandardEnvironment env = (StandardEnvironment) staticApplicationContext.getEnvironment();
+		return env.getPropertySources();
+	}
+
+	@Override
+	public Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+		// TODO Auto-generated method stub
+		return bean;
+	}
+
+	@Override
+	public Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+		// TODO Auto-generated method stub
+		return bean;
+	}
+
+	public static void start(Object obj) {
+		new TestUtil().setApplicationContext(bf);
+		Resource logback = bf.getResource("logback.xml");
+		if(logback != null) {
+			LogbackUtil.init((StandardServletEnvironment) bf.getEnvironment());
+			log.info("加载完毕");
+		}
 	}
 }
